# sfml-2048

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  maintenance.md  testing.md
scripts/: apply_branch_protection.sh  check_format.sh  package_source.sh
src/app/: App.cpp  App.hpp  AssetResolver.cpp  AssetResolver.hpp  SoundManager.cpp  SoundManager.hpp  main.cpp
src/core/: Game.cpp  Game.hpp  ScoreManager.cpp  ScoreManager.hpp
tests/: core_unit_tests.cpp
